# projeto-sgbd-itp

./: .gitignore  CMakeLists.txt  README.md  Readme(Leema).txt  defs.h  main.c  run.sh  test.c  todo
functions/: auxfuncs.c  fileOp.c  format.c  funcs.h  menu.c  table.c
src/: main.c
src/functions/: addData.c  commonFunctions.c  createTable.c  deleteLine.c  deleteTable.c  fileOperations.c  listTables.c  showData.c
src/include/: definitions.h  functions.h
